Fix IE compatible, playmode on mobile

--- a/src/sass/player.sass
+++ b/src/sass/player.sass
@@ -404,6 +404,8 @@
         &.penguin-player__player-playlist
             &+.penguin-player__lyric
                 bottom: calc(#{variables.$thumbnail-size + 8px + 92px + 20px} + #{variables.$playlist-height})
+        .penguin-player__player--controls-playmode::after
+            opacity: 1
     .penguin-player__lyric
         > *:not(.penguin-player__lyric--expand-button)
             text-align: right!important
